# visionx

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: Controller.action
cpp/src/: main.cpp
doc/: Analysis.md  DevGuide.md  Plan.md  README.md  Research.md  TODO.md  Techniques.md  Thoughts.md
msg/: depth.msg
scripts/: prototype.py  visual_toolbox.py
scripts/configs/: base_config.py
scripts/detectors/utils/: feature.py  robosub2015.py
scripts/rosbridge/ref/: comm.py  (+1 more)
scripts/vision_lib/: core.py  stats.py
src/: CMakeLists.txt
src/configs/: baseConfig.py
src/detectors/: base_detector.py  lane_detector.py
src/detectors/utils/: draw.py  enhancement.py  feature.py  output.py  stats.py  threshold.py
src/rosbridge/: baseComm.py  base_comm.py
src/rosbridge/configs/: baseConfig.py  base_config.py  data_type.py
src/taskrunners/: .baseRunner.py.swp  BaseRunner.py  baseRunner.py  lanerunner.py  utils.py
src/taskrunners/configs/ref/: home.cfg
src/taskrunners/detectors/: lane_detector.py
src/taskrunners/detectors/utils/: draw.py  stats.py
src/taskrunners/detectors/utils/ref/: common.py
src/taskrunners/ref/: home_task.py
src/taskrunners/rosbridge/: base_comm.py
src/taskrunners/rosbridge/configs/: .base_config.py.swo
src/tools/ref/: tune.py
src/utils/: conversion.py  feature.py  preprocess.py  prototype.py  stats.py
srv/: locomotion_mode.srv  set_controller.srv  vision_to_mission.srv
taskrunners/: prototype.py
taskrunners/rosbridge/: base_comm.py
tools/ref/: gui.py  hsv_threshold.py
vision_msgs/srv/: mission_to_vision.srv
(+4 files in other folders)
